UseG1GC is not properly accounted for by INCLUDE_ALTERNATE_GCS

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs25
    • Affects Version/s: hs25
    • Component/s: embedded
    • None
    • b20

        When INCLUDE_ALTERNATE_GCS is not defined all GCs except serialGC are disable and requests for specific GCS eg -XX:+UseParallelGC should issues a warning:

        warning("Parallel GC is not supported in this VM. Using Serial GC.");

        However UseG1GC is missing from the set of GC flags that get tested.

              Assignee:
              Joseph Provino (Inactive)
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: