8003581: UseG1GC is not properly accounted for by INCLUDE_ALTERNATE_GCS

Fix warning messages when selected garbage collectors are excluded from the minimal jvm.

Reviewed-by: dholmes, cjplummer